# backtracking_iterator

./: Cargo.toml  README.md
src/: concurrent.rs  copying.rs  lib.rs  record.rs  referencing.rs  slice.rs  sliceable.rs  traits.rs
