[package]
name = "backtracking_iterator"
description = "A simple implementation of a generic iterator with an item history, capable of backtracking and forgetting."
version = "0.2.0"
authors = ["Isaac van Bakel <ivb@vanbakel.io>"]
edition = "2018"

keywords = ["iterator", "backtracking", "history"]
categories = ["data-structures"]
license = "MIT"

